fix layoutWrap padding

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   min-height: 100dvh;
-  padding: 24px 0;
 }
 
 main {
